# PythonArcade

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
docs/: architecture.md  codex-workflow.md  packaging.md  ui-guidelines.md
docs/tasks/: 001-foundation.md  002-launcher-ui.md
src/arcade_app/: app.py  config.py  constants.py  registry.py
src/arcade_app/core/: assets.py  game_base.py  run_result.py  save_data.py  scaling.py  scene_base.py  scene_manager.py
src/arcade_app/games/advanced_target_trainer/: __init__.py  game.py
src/arcade_app/games/aim_trainer/: __init__.py  game.py
src/arcade_app/games/asteroids/: game.py
src/arcade_app/games/battleships/: game.py  logic.py
src/arcade_app/games/breakout/: game.py
src/arcade_app/games/bullet_hell_lite/: __init__.py  game.py
src/arcade_app/games/connect4/: game.py  logic.py
src/arcade_app/games/crossword/: __init__.py  game.py
src/arcade_app/games/dodge_falling_blocks/: __init__.py  game.py
src/arcade_app/games/endless_runner/: __init__.py  game.py
src/arcade_app/games/flappy_bird/: game.py
src/arcade_app/platform/: __init__.py  achievements.py  challenges.py  library.py
src/arcade_app/scenes/: __init__.py  achievements_scene.py  credits_scene.py  daily_challenge_scene.py  game_details_scene.py  game_select_scene.py  main_menu_scene.py  placeholder_game_scene.py  profile_manager_scene.py  run_summary_scene.py  settings_scene.py
src/arcade_app/ui/: button.py  card.py  game_ui.py  screen.py  theme.py
tests/: test_layouts.py  test_registry.py  test_save_data.py
(+33 files in other folders)
